remove y-axis labels animation and fix axis colour for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
 
   --other-lines: #757575;
 
-  --axis-text-color: #6b7280;
+  --axis-text-color: #757575;
   --axis-lines-color: #b6b6b6aa;
 
   --modal-bg-color: #f9f9f9;
@@ -40,7 +40,9 @@
     --bg-color: #121212;   
     --text-color: #eeeeee;  
 
-    --other-lines: #999999;
+    --other-lines: #dfdfdf;
+
+    --axis-text-color: #9d9d9d;
 
     --target-red: #CF4444;
 
